--- a/_config.yml
+++ b/_config.yml
@@ -263,8 +263,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Nguyen]
+  first_name: [Hieu, H.]
 
   style: apa
   locale: en
