--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,69 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Hieu-Huu Nguyen
     - name: Date of Birth
-      value: 14th March 1879
+      value: 
     - name: Languages
-      value: English, German
+      value: English, Vietnamese
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University of Texas, Austin, TX USA
+      year: 2020
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Computational Science, Engineering and Mathematics
+        - GPA: 3.80
+        - title: Parallel-in-time methods for high frequency wave propagation in heterogeneous media
+          
+    - title: Bachelor of Science
+      institution: University of Minnesota, Minneapolis, MN USA
+      year: 2014
       description:
-        - Description 1.
-        - Description 2.
+        - Physics, with Math minor
+        - GPA: 3.83
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: HPC Applications Engineer
+      company: ASML, Netherlands
+      year: 2022 - present
       description:
         - Description 1.
         - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+    - title: Postdoc Researcher
+      institution: University of Basel, Switzerland
+      year: 2020 - 2022
       description:
         - Description 1.
         - Description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+    - title: Graduate Data Engineer
+      company: Dell Technologies, Austin, Texas, USA
       year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2014
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - National Initiative for Modeling and Simulation Graduate Research Fellowship, Institute for Computational Engineering and Sciences
+		- Vietnam Education Foundation Fellowship
+    - year: 2013
       items: 
-        - Max Planck Medal
+        - Edmond B. Franklin Scholarship, School of Physics and Astronomy, University of Minnesota, Twin Cities
 
-- title: Academic Interests
+- title: Professional Interests
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Wave propagation
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - Parallel-in-time algorithm
+        - Inverse problems
+    - title: Scientific computing
       items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+        - Deep learning
+        - Numerical linear algebra
