--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,8 +3,6 @@
   contents:
     - name: Full Name
       value: Hieu-Huu Nguyen
-    - name: Date of Birth
-      value: 
     - name: Languages
       value: English, Vietnamese
 
@@ -16,43 +14,35 @@
       year: 2020
       description:
         - Computational Science, Engineering and Mathematics
-        - GPA: 3.80
-        - title: Parallel-in-time methods for high frequency wave propagation in heterogeneous media
-          
+        - GPA 3.80
+        - Thesis topic ``Parallel-in-time methods for high frequency wave propagation in heterogeneous media''
     - title: Bachelor of Science
       institution: University of Minnesota, Minneapolis, MN USA
       year: 2014
       description:
         - Physics, with Math minor
-        - GPA: 3.83
+        - GPA 3.83
 
 - title: Experience
   type: time_table
   contents:
     - title: HPC Applications Engineer
-      company: ASML, Netherlands
+      institution: ASML, Netherlands
       year: 2022 - present
-      description:
-        - Description 1.
-        - Description 2.
     - title: Postdoc Researcher
       institution: University of Basel, Switzerland
       year: 2020 - 2022
-      description:
-        - Description 1.
-        - Description 2.
-
     - title: Graduate Data Engineer
-      company: Dell Technologies, Austin, Texas, USA
-      year: 1917-1933
+      institution: Dell Technologies, Austin, Texas, USA
+      year: 2018
 
 - title: Honors and Awards
   type: time_table
   contents:
     - year: 2014
       items: 
-        - National Initiative for Modeling and Simulation Graduate Research Fellowship, Institute for Computational Engineering and Sciences
-		- Vietnam Education Foundation Fellowship
+        - National Initiative for Modeling and Simulation Fellowship
+        - Vietnam Education Foundation Fellowship
     - year: 2013
       items: 
         - Edmond B. Franklin Scholarship, School of Physics and Astronomy, University of Minnesota, Twin Cities
